# ghactiontest

./: CMakeLists.txt  class1.cpp  class1.h  main.qml
.github/workflows/: build-ios.yml  build-mac.yml  test.yml
aws-ci/build-slave-client-mac/: build_guest.sh
aws-ci/client-shared/: auto-install-qt.js
